<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="grupo001.dam.isi.frsf.utn.edu.ar.lab02.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedirCenaTitle" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/reservarTBtn"
        android:textOn="@string/deliveryTBtn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectHorLbl"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificarLbl" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/listaPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:minLines="1"
            android:maxLines="4"
            ></TextView>
    </ScrollView>

    <RadioGroup
        android:id="@+id/seleccionRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/platoRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/platoBtn" />

        <RadioButton
            android:id="@+id/postreRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/postreBtn" />

        <RadioButton
            android:id="@+id/bebidaRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bebidaBtn" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/agregarBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="AGREGAR"
            />

        <Button
            android:id="@+id/confirmarPedidoBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="CONFIRMAR PEDIDO" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="REINICIAR" />
    </LinearLayout>

    <ListView
        android:id="@+id/listaOpciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        ></ListView>
</LinearLayout>
