<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grupo001.dam.isi.frsf.utn.edu.ar.lab02.PagoPedido">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombrePP"/>

    <EditText
        android:id="@+id/ingresoNombrePP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correoPP"/>

    <EditText
        android:id="@+id/ingresoCorreoPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreTarjetaPP"/>

    <EditText
        android:id="@+id/ingresoTarjetaPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechaVenPP"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Mes:"/>

        <EditText
            android:id="@+id/mesVencimientoPP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Año:"/>

        <EditText
            android:id="@+id/anioVencimientoPP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>


    <Button
        android:id="@+id/confirmarPagoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmarPP" />

    <Button
        android:id="@+id/cancelarPagoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelarPP" />


</LinearLayout>
